--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraConnection/tCassandraConnection_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraConnection/tCassandraConnection_messages_ja.properties
@@ -1,3 +1,4 @@
+CLUSTER.NAME=\u30AF\u30E9\u30B9\u30BF
 HELP=org.talend.help.tCassandraConnection
 HOST.NAME=\u30B5\u30FC\u30D0
 KEY_SPACE.NAME=\u30AD\u30FC\u30B9\u30DA\u30FC\u30B9
@@ -7,5 +8,5 @@ PORT.NAME=\u30DD\u30FC\u30C8
 PROPERTY.NAME=\u30D7\u30ED\u30D1\u30C6\u30A3
 USERNAME.NAME=\u30E6\u30FC\u30B6\u540D
 DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
-DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
