--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages_en.properties
@@ -59,8 +59,8 @@ SUPER_COLUMN_TYPE.ITEM.BOOLEAN=Boolean
 SUPER_COLUMN_TYPE.ITEM.OBJECT=Object
 SUPER_COLUMN_TYPE.ITEM.SHORT=Short
 DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
-DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
 ROW_KEY_TYPE.ITEM.BIGDECIMAL=BigDecimal
 DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
 ROW_KEY_C_TYPE.NAME=Row key Cassandra type
@@ -78,4 +78,3 @@ SUPER_COLUMN_C_TYPE.ITEM.ASCIITYPE=Ascii
 SUPER_COLUMN_C_TYPE.ITEM.UUIDTYPE=UUID
 SUPER_COLUMN_C_TYPE.ITEM.TIMEUUIDTYPE=TimeUUID
 SUPER_COLUMN_TYPE.ITEM.BIGDECIMAL=BigDecimal
-DB_VERSION.ITEM.CASSANDRA_2_0_8=Cassandra 2.0.8
