--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages_ja.properties
@@ -1,3 +1,4 @@
+CLUSTER.NAME=\u30AF\u30E9\u30B9\u30BF
 COLUMN_FAMILY.NAME=\u30AB\u30E9\u30E0\u30D5\u30A1\u30DF\u30EA
 COLUMN_FAMILY_CONFIGURATION.NAME=\u30AB\u30E9\u30E0\u30D5\u30A1\u30DF\u30EA\u8A2D\u5B9A
 COLUMN_FAMILY_TYPE.ITEM.STANDARD=\u6A19\u6E96
@@ -49,5 +50,5 @@ SUPER_COLUMN_TYPE.ITEM.BOOLEAN=\u30D6\u30FC\u30EB\u578B
 SUPER_COLUMN_TYPE.ITEM.OBJECT=\u30AA\u30D6\u30B8\u30A7\u30AF\u30C8\u578B
 SUPER_COLUMN_TYPE.ITEM.SHORT=\u77ED\u6574\u6570\u578B
 DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
-DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
