--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages_fr.properties
@@ -56,7 +56,9 @@ SUPER_COLUMN_TYPE.ITEM.BOOLEAN=Boolean
 SUPER_COLUMN_TYPE.ITEM.OBJECT=Object
 SUPER_COLUMN_TYPE.ITEM.SHORT=Short
 DB_VERSION.NAME=Version de la base de données
-DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
-DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
+ROW_KEY_C_TYPE.ITEM.DEFAULT=Défaut
 ROW_KEY_C_TYPE.ITEM.INTEGERTYPE=Integer
 ROW_KEY_C_TYPE.ITEM.ASCIITYPE=Ascii
+SUPER_COLUMN_C_TYPE.ITEM.ASCIITYPE=Ascii
