[TBD-1815] Oozie job cannot run successfully when using HDP 2.1

--- a/main/plugins/org.talend.oozie.scheduler/src/messages.properties
+++ b/main/plugins/org.talend.oozie.scheduler/src/messages.properties
@@ -68,3 +68,7 @@ OozieMonitoringComposite.linkText=No mozilla support detected for the browser, m
 
 ExecuteJobCompositeController.doRunAction.Exception.title=Error
 ExecuteJobCompositeController.doRunAction.Exception.message=An error occured ({0}).
+
+OozieExecutingPreferencePage.executionSettingsGroup.label=Execution Settings
+OozieExecutingPreferencePage.statusTimeoutField.label=Job Status Timeout
+OozieExecutingPreferencePage.statusTimeoutField.tooltip=Specify the timeout of achieving job execution status. Default is "-1" which means \ndisable the timeout. The unit is second.
