TDI-32076:Can't set job name same with project's name if has child job

--- a/main/plugins/org.talend.repository.pigudf/src/main/java/messages.properties
+++ b/main/plugins/org.talend.repository.pigudf/src/main/java/messages.properties
@@ -14,3 +14,4 @@ PropertiesWizardPage.ItemExistsError=This item already exists. Check the Recycle
 PropertiesWizardPage.KeywordsError=Name is not a valid identifier.
 PropertiesWizardPage.NameEmptyError=Name is empty.
 PropertiesWizardPage.NameFormatError=Name contains incorrect characters.
+PropertiesWizardPage.SameAsProjectname=Name is same as project name.
