--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages_fr.properties
@@ -11,7 +11,7 @@ USERNAME.NAME=Utilisateur
 CONNECTION.NAME=Connexion
 AUTHENTICATION.NAME=Authentification
 DB_VERSION.NAME=Version de la base de données
-DB_VERSION.ITEM.MONGODB_2_2_3=MongoDB 2.2.X (Deprecated)
-DB_VERSION.ITEM.MONGODB_2_1_2=MongoDB 2.1.X (Deprecated)
+DB_VERSION.ITEM.MONGODB_3_0_X=MongoDB 3.0.X
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
-DB_VERSION.ITEM.MONGODB_2_4_X=MongoDB 2.4.X (Deprecated)
+
