--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages_fr.properties
@@ -17,7 +17,6 @@ USERNAME.NAME=Utilisateur
 USE_EXISTING_CONNECTION.NAME=Utiliser une connexion existante
 AUTHENTICATION.NAME=Authentification
 DB_VERSION.NAME=Version de la base de données
-DB_VERSION.ITEM.MONGODB_2_2_3=MongoDB 2.2.X (Deprecated)
-DB_VERSION.ITEM.MONGODB_2_1_2=MongoDB 2.1.X (Deprecated)
+DB_VERSION.ITEM.MONGODB_3_0_X=MongoDB 3.0.X
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
-DB_VERSION.ITEM.MONGODB_2_4_X=MongoDB 2.4.X (Deprecated)
