[TUP-2635] Add wizard to import all Hadoop configuration from site files

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -26,6 +26,11 @@ HadoopClusterForm.connectionSettings=Connection
 HadoopClusterForm.text.namenodeURI=Namenode URI
 HadoopClusterForm.text.jobtrackerURI=Jobtracker URI
 HadoopClusterForm.text.resourceManager=Resource Manager
+HadoopClusterForm.text.rmScheduler=Resource Manager Scheduler
+HadoopClusterForm.text.jobHistory=Job History
+HadoopClusterForm.text.stagingDirectory=Staging directory
+HadoopClusterForm.button.useDNHost=Use datanode hostname
+HadoopClusterForm.button.useCustomConf=Use custom hadoop confs
 HadoopClusterForm.authenticationSettings=Authentication
 HadoopClusterForm.button.kerberos=Enable kerberos security
 HadoopClusterForm.text.namenodePrincipal=Namenode Principal
@@ -107,4 +112,34 @@ CreateHadoopNodeAction.editLabel=Edit {0}
 CreateHadoopNodeAction.openLabel=Open {0}
 
 AbstractHadoopClusterMigrationTask.errorMsg=Fail to execute hadoop cluster migration task
+
+HadoopImportConfsWizard.title=Hadoop Configuration Import Wizard
+HadoopImportConfsWizard.doingImport=Importing confs...
+
+HadoopImportConfsOptionPage.title=Import Option
+HadoopImportConfsOptionPage.desc=Please select one import option
+HadoopImportConfsOptionPage.group.distribution=Distribution
+HadoopImportConfsOptionPage.group.option=Option
+HadoopImportConfsOptionPage.option.remote=Retrieve configuration from Ambari or Cloudera
+HadoopImportConfsOptionPage.option.local=Import configuration from local files
+HadoopImportConfsOptionPage.option.manual=Enter manually Hadoop services
+
+HadoopImportLocalOptionPage.title=Local
+HadoopImportLocalOptionPage.desc=Import configuration from local files
+HadoopImportLocalOptionPage.location.label=Location
+
+HadoopImportRemoteOptionPage.title=Remote
+HadoopImportRemoteOptionPage.desc=Retrieve configuration from Cloudera Manager
+HadoopImportRemoteOptionPage.group.connection=Enter Manager credentials
+HadoopImportRemoteOptionPage.text.connURL=Manager URI (with port)
+HadoopImportRemoteOptionPage.text.username=Username
+HadoopImportRemoteOptionPage.text.password=Password
+HadoopImportRemoteOptionPage.button.connect=Connect
+HadoopImportRemoteOptionPage.group.clusters=Discovered clusters
+HadoopImportRemoteOptionPage.button.select=Select
+
+HadoopServicesTableComposite.button.selectAll=Select All
+HadoopServicesTableComposite.button.deselectAll=Deselect All
+HadoopServicesTableComposite.checkServiceSelected=Please select one service at least.
+
 
