--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -129,12 +129,16 @@ HadoopImportLocalOptionPage.desc=Import configuration from local files
 HadoopImportLocalOptionPage.location.label=Location
 
 HadoopImportRemoteOptionPage.title=Remote
-HadoopImportRemoteOptionPage.desc=Retrieve configuration from Cloudera Manager
-HadoopImportRemoteOptionPage.group.connection=Enter Manager credentials
-HadoopImportRemoteOptionPage.text.connURL=Manager URI (with port)
+HadoopImportRemoteOptionPage.desc.cm=Retrieve configuration from Cloudera Manager
+HadoopImportRemoteOptionPage.desc.abr=Retrieve configuration from Ambari
+HadoopImportRemoteOptionPage.group.connection.cm=Enter Manager credentials
+HadoopImportRemoteOptionPage.group.connection.abr=Enter Ambari credentials
+HadoopImportRemoteOptionPage.text.connURL.cm=Manager URI (with port)
+HadoopImportRemoteOptionPage.text.connURL.abr=Ambari URI (with port)
 HadoopImportRemoteOptionPage.text.username=Username
 HadoopImportRemoteOptionPage.text.password=Password
 HadoopImportRemoteOptionPage.button.connect=Connect
+HadoopImportRemoteOptionPage.connectionFailed=Connection failed, please check the connection parameters.
 HadoopImportRemoteOptionPage.group.clusters=Discovered clusters
 HadoopImportRemoteOptionPage.button.select=Select
 
