TUP-2635: Add DND support and update hadoop classloaders.

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -140,7 +140,7 @@ HadoopImportRemoteOptionPage.text.password=Password
 HadoopImportRemoteOptionPage.button.connect=Connect
 HadoopImportRemoteOptionPage.connectionFailed=Connection failed, please check the connection parameters.
 HadoopImportRemoteOptionPage.group.clusters=Discovered clusters
-HadoopImportRemoteOptionPage.button.select=Select
+HadoopImportRemoteOptionPage.button.fetch=Fetch
 
 HadoopServicesTableComposite.button.selectAll=Select All
 HadoopServicesTableComposite.button.deselectAll=Deselect All
