TUP-2635: Add wizard to import all Hadoop configuration from site files -Add authentication support -Improving filling values -Add org.talend.libaries.hadoop to product

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -137,6 +137,10 @@ HadoopImportRemoteOptionPage.text.connURL.cm=Manager URI (with port)
 HadoopImportRemoteOptionPage.text.connURL.abr=Ambari URI (with port)
 HadoopImportRemoteOptionPage.text.username=Username
 HadoopImportRemoteOptionPage.text.password=Password
+HadoopImportRemoteOptionPage.auth.check=Use authentication
+HadoopImportRemoteOptionPage.auth.type=TrustStore type
+HadoopImportRemoteOptionPage.auth.file=TrustStore file
+HadoopImportRemoteOptionPage.auth.pwd=TrustStore password
 HadoopImportRemoteOptionPage.button.connect=Connect
 HadoopImportRemoteOptionPage.connectionFailed=Connection failed, please check the connection parameters.
 HadoopImportRemoteOptionPage.group.clusters=Discovered clusters
