TBD-2082 fixed: Make the HDFS browser work for Spark and Spark Streaming

--- a/main/plugins/org.talend.designer.hdfsbrowse/src/messages.properties
+++ b/main/plugins/org.talend.designer.hdfsbrowse/src/messages.properties
@@ -8,6 +8,8 @@ HDFSBrowseDialog.button.collapseAll=Collapse All
 AbstractHDFSBrowseController.connectionFailure.mainMsg=Connection failure. You must change the HDFS Settings.
 AbstractHDFSBrowseController.connectionFailure.detailMsg=Cannot connect to HDFS "{0}". Please check the connection parameters.
 AbstractHDFSBrowseController.checkConnection=Checking HDFS connection...
+AbstractHDFSBrowseController.unsupportedOperation.mainMsg=Unsupported operation. 
+AbstractHDFSBrowseController.unsupportedOperation.detailMsg=Browsing this file system is not supported. Only HDFS is currently supported.
 
 CheckHadoopServicesDialog.title=Checking Hadoop Services
 CheckHadoopServicesDialog.msg=Checking the hadoop services below.
