TDI-32972 Bug : DI Studio Part TDI-32972:In the Oozie settings view, all fields are greyed out even though I am not using properties from Repository

--- a/main/plugins/org.talend.oozie.scheduler/src/messages.properties
+++ b/main/plugins/org.talend.oozie.scheduler/src/messages.properties
@@ -19,6 +19,7 @@ TOozieUIConstants_LBL_Frequency=Frequency
 TOozieUIConstants_LBL_TimeUnit=Time Unit
 TOozieUIConstants_LBL_StartTime=Start Time
 TOozieUIConstants_LBL_EndTime=End Time
+TOozieUIConstants_LBL_Property_Type=Property Type
 TOozieUIConstants_LBL_version_group=Version
 TOozieUIConstants_LBL_connection_group=Connection
 TOozieUIConstants_LBL_hadoop_distribution=Hadoop distribution
