TBD-2387:new API type in cassandra component, which inpact wizard.

--- a/main/plugins/org.talend.repository.nosql/src/messages.properties
+++ b/main/plugins/org.talend.repository.nosql/src/messages.properties
@@ -44,6 +44,8 @@ CassandraConnForm.authentication=Authentication
 CassandraConnForm.connection=Connection
 CassandraConnForm.dbVersion=DB Version
 CassandraConnForm.dbVersionTip=Set database version
+CassandraConnForm.apiType=API type
+CassandraConnForm.apiTypeTip=API type
 CassandraConnForm.keyspace=Keyspace
 CassandraConnForm.password=Password
 CassandraConnForm.port=Port
@@ -134,6 +136,12 @@ noSQLRepositoryTranslator.CASSANDRA=Cassandra
 noSQLRepositoryTranslator.CASSANDRA_1_1_2=Cassandra 1.1.2
 noSQLRepositoryTranslator.CASSANDRA_1_2_2=Cassandra 1.2.2
 noSQLRepositoryTranslator.CASSANDRA_2_0_0=Cassandra 2.0.x/2.1.x
+
+noSQLRepositoryTranslator.DATASTAX=Datastax
+noSQLRepositoryTranslator.HECTOR=Hector
+
+noSQLRepositoryTranslator.Datastax=DATASTAX
+noSQLRepositoryTranslator.Hector=HECTOR
 
 noSQLRepositoryTranslator.Neo4=Neo4J
 noSQLRepositoryTranslator.NEO4J_1_X_X=Neo4J 1.X.X
