TUP-3338 - change label for hadoop remote configuration wizard

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -139,7 +139,7 @@ HadoopImportRemoteOptionPage.text.connURL.cm=Manager URI (with port)
 HadoopImportRemoteOptionPage.text.connURL.abr=Ambari URI (with port)
 HadoopImportRemoteOptionPage.text.username=Username
 HadoopImportRemoteOptionPage.text.password=Password
-HadoopImportRemoteOptionPage.auth.check=Use authentication
+HadoopImportRemoteOptionPage.auth.check=Set encryption
 HadoopImportRemoteOptionPage.auth.type=TrustStore type
 HadoopImportRemoteOptionPage.auth.file=TrustStore file
 HadoopImportRemoteOptionPage.auth.pwd=TrustStore password
