--- a/main/plugins/org.talend.repository.nosql/src/messages.properties
+++ b/main/plugins/org.talend.repository.nosql/src/messages.properties
@@ -146,6 +146,7 @@ noSQLRepositoryTranslator.Hector=HECTOR
 noSQLRepositoryTranslator.Neo4=Neo4J
 noSQLRepositoryTranslator.NEO4J_1_X_X=Neo4J 1.X.X
 noSQLRepositoryTranslator.NEO4J_2_1_X=Neo4J 2.1.X
+noSQLRepositoryTranslator.NEO4J_2_2_X=Neo4J 2.2.X
 
 noSQLRepositoryTranslator.NEO4J=Neo4j
 
