--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages_en.properties
@@ -51,6 +51,8 @@ DB_VERSION.ITEM.APACHE_2_4_0_EMR=Apache 2.4.0
 USE_DATANODE_HOSTNAME.NAME=Use Datanode Hostname
 DB_VERSION.ITEM.HDP_2_2=Hortonworks Data Platform V2.2.0
 DB_VERSION.ITEM.Cloudera_CDH5_4=Cloudera CDH5.4(YARN mode)
+CONFIGURATIONS_FROM_CLASSPATH.NAME = Inspect the classpath for configurations
+CONFIGURATIONS.NAME = Configurations
 DB_VERSION.ITEM.MAPR410=MapR 4.1.0(YARN mode)
 DB_VERSION.ITEM.EMR_4_0_0=EMR 4.0.0 (Apache 2.6.0)
 DB_VERSION.ITEM.MAPR500=MapR 5.0.0(YARN mode)
