--- a/main/plugins/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages_en.properties
@@ -40,6 +40,9 @@ HBASE_VERSION.ITEM.APACHE_2_4_0_EMR=Apache 2.4.0 (HBase 0.94.18)
 HBASE_VERSION.ITEM.Cloudera_CDH5_1_MR1=Cloudera CDH5.1(MR 1 mode)
 HBASE_VERSION.ITEM.Cloudera_CDH5_1=Cloudera CDH5.1(YARN mode)
 HBASE_VERSION.ITEM.MAPR401=MapR 4.0.1(YARN mode)
+HBASE_VERSION.ITEM.MAPR410=MapR 4.1.0(YARN mode)
+HBASE_VERSION.ITEM.HDP_2_3=Hortonworks Data Platform V2.3.0
+HBASE_VERSION.ITEM.MAPR500=MapR 5.0.0(YARN mode)
 HADOOP_CUSTOM_VERSION.NAME=Hadoop version of the distribution
 HADOOP_CUSTOM_VERSION.ITEM.HADOOP_1=Hadoop 1
 HADOOP_CUSTOM_VERSION.ITEM.HADOOP_2=Hadoop 2
@@ -52,6 +55,5 @@ HBASE_MASTER_PRINCIPAL.NAME=HBase Master principal
 HBASE_REGIONSERVER_PRINCIPAL.NAME=HBase Region Server principal
 HBASE_VERSION.ITEM.HDP_2_2=Hortonworks Data Platform V2.2.0
 HBASE_VERSION.ITEM.Cloudera_CDH5_4=Cloudera CDH5.4(YARN mode)
-HBASE_VERSION.ITEM.MAPR410=MapR 4.1.0(YARN mode)
-HBASE_VERSION.ITEM.HDP_2_3=Hortonworks Data Platform V2.3.0
-HBASE_VERSION.ITEM.MAPR500=MapR 5.0.0(YARN mode)
+CONFIGURATIONS_FROM_CLASSPATH.NAME = Inspect the classpath for configurations
+CONFIGURATIONS.NAME = Configurations
