[TBD-2749] Add support for classpath configuration to HBaseConnection

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages_en.properties
@@ -55,3 +55,6 @@ HBASE_MASTER_PRINCIPAL.NAME=HBase Master principal
 HBASE_REGIONSERVER_PRINCIPAL.NAME=HBase Region Server principal
 HBASE_VERSION.ITEM.HDP_2_2=Hortonworks Data Platform V2.2.0
 HBASE_VERSION.ITEM.Cloudera_CDH5_4=Cloudera CDH5.4(YARN mode)
+
+CONFIGURATIONS_FROM_CLASSPATH.NAME = Inspect the classpath for configurations
+CONFIGURATIONS.NAME = Configurations
