[TBD-2849] Support update all with tMongoDBOutput

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages_en.properties
@@ -84,3 +84,5 @@ AUTHENTICATION_MECHANISM.ITEM.KERBEROS_MEC=GSSAPI SASL (KERBEROS)
 KRB_USER_PRINCIPAL.NAME=User principal
 KRB_REALM.NAME=Realm
 KRB_KDC.NAME=KDC server
+
+UPDATE_ALL.NAME=Update all documents
