[TBD-2749] fix tPigLoad classpath configuration

--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages_en.properties
@@ -164,3 +164,5 @@ TEZ_LIB_PATH.NAME=Lib path(folder or file)
 PIG_VERSION.ITEM.Cloudera_CDH5_4=Cloudera CDH5.4(YARN mode)
 HBASEMASTER_PRINCIPAL.NAME=HBase Master principal
 HBASEREIGONSERVER_PRINCIPAL.NAME=HBase Reigon server principal
+
+CONFIGURATIONS_FROM_CLASSPATH.NAME = Inspect the classpath for configurations
