TUP-3967:Cassandra 3.x update for 6.2

--- a/main/plugins/org.talend.repository.nosql/src/messages.properties
+++ b/main/plugins/org.talend.repository.nosql/src/messages.properties
@@ -137,6 +137,7 @@ noSQLRepositoryTranslator.CASSANDRA=Cassandra
 noSQLRepositoryTranslator.CASSANDRA_1_1_2=Cassandra 1.1.2
 noSQLRepositoryTranslator.CASSANDRA_1_2_2=Cassandra 1.2.2
 noSQLRepositoryTranslator.CASSANDRA_2_0_0=Cassandra 2.0.x/2.1.x
+noSQLRepositoryTranslator.CASSANDRA_3_0_0=Cassandra 3.0.0
 
 noSQLRepositoryTranslator.DATASTAX=Datastax
 noSQLRepositoryTranslator.HECTOR=Hector
