--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -13,6 +13,19 @@ HadoopClusterWizardPage.descriptionUpdate.Step2=Update connection parameters
 
 HadoopClusterSchemaWizard.persistenceException=Access to the data failure
 
+HadoopClusterForm.navigatorSettings=Navigator
+HadoopClusterForm.button.use_cloudera_navigator=Use cloudera navigator
+HadoopClusterForm.text.navigator_username=Username
+HadoopClusterForm.text.navigator_password=Password
+HadoopClusterForm.text.navigator_url=Url
+HadoopClusterForm.text.navigator_metadata_url=Metadata url
+HadoopClusterForm.text.navigator_client_url=Client url
+HadoopClusterForm.button.navigator_autocommit=Autocommit
+HadoopClusterForm.button.navigator_disable_ssl=Disable ssl
+HadoopClusterForm.button.navigator_die_on_error=Die on error
+ClouderNavigatorWizard.windowTitle=Clouder Navigator Wizard
+ClouderaNavigatorOptionPage.title=Cloudera Navigator
+
 HadoopClusterForm.versionSettings=Version
 HadoopClusterForm.distribution=Distribution
 HadoopClusterForm.distribution.tooltip=Set the hadoop distribution
