--- a/main/plugins/org.talend.repository.nosql/src/messages.properties
+++ b/main/plugins/org.talend.repository.nosql/src/messages.properties
@@ -137,8 +137,8 @@ noSQLRepositoryTranslator.CASSANDRA=Cassandra
 noSQLRepositoryTranslator.CASSANDRA_1_1_2=Cassandra 1.1.2
 noSQLRepositoryTranslator.CASSANDRA_1_2_2=Cassandra 1.2.2
 noSQLRepositoryTranslator.CASSANDRA_2_0_0=Cassandra 2.0.x/2.1.x
-noSQLRepositoryTranslator.CASSANDRA_3_0_0=Cassandra 3.0.X
-noSQLRepositoryTranslator.CASSANDRA_2_2_0=Cassandra 2.2.0
+noSQLRepositoryTranslator.CASSANDRA_3_0=Cassandra 3.0.x
+noSQLRepositoryTranslator.CASSANDRA_2_2=Cassandra 2.2.x
 
 noSQLRepositoryTranslator.DATASTAX=Datastax
 noSQLRepositoryTranslator.HECTOR=Hector
