TBD-3563:Studio: MapR 5.1 connection wizard doesn't support MapR cluster secured with ticket. No option available

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -55,6 +55,15 @@ HadoopClusterForm.text.keytabPrincipal=Principal
 HadoopClusterForm.text.userName=User name
 HadoopClusterForm.text.group=Group
 HadoopClusterForm.text.keytab=Keytab
+HadoopClusterForm.button.maprTicket=Force Mapr Ticket Authentication
+HadoopClusterForm.text.maprTUsername=Username
+HadoopClusterForm.text.maprTPassword=Password
+HadoopClusterForm.text.maprTCluster=Cluster Name
+HadoopClusterForm.text.maprTDuration=Ticket Duration
+HadoopClusterForm.button.setMaprTHomeDir=Set The Mapr Home Directory
+HadoopClusterForm.button.setHadoopLogin=Specify The Hadoop Login Configuration
+HadoopClusterForm.button.preloadAuthentification=Load The Authentication Mechanism Before Creating The Job
+
 HadoopClusterForm.button.check=Check Services
 HadoopClusterForm.checkServices.warning1=Note that the check of services may fail if the connection needs some specific Hadoop properties,
 HadoopClusterForm.checkServices.warning2=such as Kerberos options, to be configured.
