TBD-3437:Word "Cloudera" is spelled as "Clouder" wrongly in the cloudera navigator wizard

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -23,7 +23,7 @@ HadoopClusterForm.text.navigator_client_url=Client url
 HadoopClusterForm.button.navigator_autocommit=Autocommit
 HadoopClusterForm.button.navigator_disable_ssl=Disable ssl
 HadoopClusterForm.button.navigator_die_on_error=Die on error
-ClouderNavigatorWizard.windowTitle=Clouder Navigator Wizard
+ClouderNavigatorWizard.windowTitle=Cloudera Navigator Wizard
 ClouderaNavigatorOptionPage.title=Cloudera Navigator
 
 HadoopClusterForm.versionSettings=Version
