--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -61,7 +61,7 @@ HadoopClusterForm.text.maprTCluster=Cluster Name
 HadoopClusterForm.text.maprTDuration=Ticket Duration
 HadoopClusterForm.button.setMaprTHomeDir=Set The Mapr Home Directory
 HadoopClusterForm.button.setHadoopLogin=Specify The Hadoop Login Configuration
-HadoopClusterForm.button.preloadAuthentification=Load The Authentication Mechanism Before Creating The Job
+HadoopClusterForm.button.preloadAuthentification.label=Launch authentication mechanism when the Job starts
 HadoopClusterForm.check.maprTPassword=Password must be specified
 HadoopClusterForm.check.maprTPassword.invalid=Password is invalid
 HadoopClusterForm.check.maprTCluster=Cluster Name must be specified
