TBD-3639: Add table on hadoop configuration wizard to support filter parameters

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -179,4 +179,5 @@ HadoopServicesTableComposite.button.selectAll=Select All
 HadoopServicesTableComposite.button.deselectAll=Deselect All
 HadoopServicesTableComposite.checkServiceSelected=Please select one service at least.
 
-
+HadoopConfFilterPropertiesDialog.title=Hadoop Properties Filter
+HadoopConfFilterPropertiesDialog.desc=Add the ignore properties.
