TBD-3821 fix:DB Version for neo4j 2.3.x should be coordinate with the old version https://jira.talendforge.org/browse/TBD-3821

--- a/main/plugins/org.talend.repository.nosql/src/messages.properties
+++ b/main/plugins/org.talend.repository.nosql/src/messages.properties
@@ -150,7 +150,7 @@ noSQLRepositoryTranslator.Neo4=Neo4J
 noSQLRepositoryTranslator.NEO4J_1_X_X=Neo4J 1.X.X
 noSQLRepositoryTranslator.NEO4J_2_1_X=Neo4J 2.1.X
 noSQLRepositoryTranslator.NEO4J_2_2_X=Neo4J 2.2.X
-noSQLRepositoryTranslator.NEO4J_2_3_X=NEO4J 2.3.X
+noSQLRepositoryTranslator.NEO4J_2_3_X=Neo4J 2.3.X
 
 noSQLRepositoryTranslator.NEO4J=Neo4j
 
