TUP-16178 fix:Unable to click the "Error log" button in the Hadoop wizard

--- a/i18n/plugins/org.talend.designer.hdfsbrowse.nl/src/messages_fr.properties
+++ b/i18n/plugins/org.talend.designer.hdfsbrowse.nl/src/messages_fr.properties
@@ -13,6 +13,6 @@ CheckHadoopServicesDialog.table.progress=Progression et statut
 CheckHadoopServicesDialog.button.check=Vérifier à nouveau
 CheckHadoopServicesDialog.tab.exceptions.title=Exceptions de {0}
 CheckHadoopServicesDialog.tab.exceptions.desc=Log d'erreur du service "{0}" :
-CheckHadoopServicesDialog.status.error.desc=<a>Log d'erreur
+CheckHadoopServicesDialog.status.error.desc=<a>Log d'erreur</a>
 AbstractHDFSBrowseController.unsupportedOperation.mainMsg=Opération non supportée
 AbstractHDFSBrowseController.unsupportedOperation.detailMsg=Parcourir ce système de fichiers n'est pas supporté. Seul HDFS est supporté.
