--- a/main/plugins/org.talend.designer.components.bigdata/src/main/java/messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/src/main/java/messages.properties
@@ -1,1 +1,1 @@
-Node.checkMapRStreamsCreateStreamVersion=The current distribution does not support the MapR Streams admin API. Please check the connected tMapRStreamsConnection.
+Node.checkMapRStreamsCreateStreamVersion=Stream creation for MapR 5.1.0 is not currently available.
