TUP-15491: On the edit Neo4j 2.1.x connection wizard has username and password field

--- a/main/plugins/org.talend.repository.nosql/src/messages.properties
+++ b/main/plugins/org.talend.repository.nosql/src/messages.properties
@@ -117,6 +117,7 @@ Neo4jConnForm.absPath.label=Absolute path
 Neo4jConnForm.serverURL.label=Server URL
 Neo4jConnForm.validate.invalidDbPath=Database path must be specified
 Neo4jConnForm.validate.invalidServerURL=Server URL must be specified
+Neo4jConnForm.setUsername.label=Set username
 
 Neo4jRetrieveSchemaForm.desc=Please input the Cypher which be used to generate the schema.
 Neo4jRetrieveSchemaForm.cypher.title=Cypher
