Feature/6.4/tup 16703 centralize spark properties (#197)
* TUP-17132:Add Spark properties in the cluster wizard(TUP-16703)

* TUP-17141:The advanced properties will populate the spark properties
table in the Spark configuration of Run tab,add context
support(TUP-16703)

* TUP-17152:Refactoring GUI part of Spark properties in the cluster,fix
some other bugs to improve(TUP-16703)

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -44,6 +44,7 @@ HadoopClusterForm.text.jobHistory=Job History
 HadoopClusterForm.text.stagingDirectory=Staging directory
 HadoopClusterForm.button.useDNHost=Use datanode hostname
 HadoopClusterForm.button.useCustomConf=Use custom hadoop confs
+HadoopClusterForm.button.useSparkProperties=Use Spark Properties
 HadoopClusterForm.authenticationSettings=Authentication
 HadoopClusterForm.button.kerberos=Enable kerberos security
 HadoopClusterForm.text.namenodePrincipal=Namenode Principal
