feat(TUP-16697): Retrieve the BD metadata (cluster config, Hive etc.) through a server-side service/gateway (#248)
* bugfix/6.4.0/TUP-16697 Retrieve the BD metadata (cluster config, Hive
etc.) through a server-side service/gateway
https://jira.talendforge.org/browse/TUP-16697

* bugfix/6.4.0/TUP-16697 Retrieve the BD metadata (cluster config, Hive
etc.) through a server-side service/gateway
https://jira.talendforge.org/browse/TUP-16697

* feature/6.4.0/TUP-16697 Retrieve the BD metadata (cluster config, Hive
etc.) through a server-side service/gateway
https://jira.talendforge.org/browse/TUP-16697

* TUP-16697 Retrieve the BD metadata (cluster config, Hive etc.) through a
server-side service/gateway
https://jira.talendforge.org/browse/TUP-16697

* TUP-16697 Retrieve the BD metadata (cluster config, Hive etc.) through a
server-side service/gateway
https://jira.talendforge.org/browse/TUP-16697

* feat(TUP-16697): improve the code
https://jira.talendforge.org/browse/TUP-16697

* feat(TUP-16697): improve the code

* feat(TUP-16697): improve the code

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -176,6 +176,7 @@ HadoopImportRemoteOptionPage.button.connect=Connect
 HadoopImportRemoteOptionPage.connectionFailed=Connection failed, please check the connection parameters.
 HadoopImportRemoteOptionPage.group.clusters=Discovered clusters
 HadoopImportRemoteOptionPage.button.fetch=Fetch
+HadoopImportRemoteOptionPage.retrieve.check=Retrieve by job server
 
 HadoopServicesTableComposite.button.selectAll=Select All
 HadoopServicesTableComposite.button.deselectAll=Deselect All
